examples/test/testpolicy14603.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14603
  namespace: namespace119
spec:
  podSelector:
    matchLabels:
      key4: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value6
          key22: value10
          key18: value31
      podSelector:
        matchLabels:
          key5: value48
          key9: value14
